fix: rounded buttons on iOS

--- a/src/components/EmailSignup/styles.scss
+++ b/src/components/EmailSignup/styles.scss
@@ -16,6 +16,9 @@
             box-sizing: border-box;
             width: 100%;
             border: 0;
+            -webkit-appearance: none;
+            -webkit-border-radius: 0px;
+
             @include typography__medium;
 
             &:focus {
